2005-01-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added support for status indicators. (web aware, that sort of thing)

2005-01-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added check for existance of nevow.

	* src/lang.py:
	Added spanish and swedish.

2005-01-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	* src/xmlconfig.py:
	* src/config.py:
	* src/config_example.py:
	Updated to new config style.

	* config_example.xml:
	Added example new configuration file.

	* PyICQt:
	Altered to pass on args.

2005-01-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Removed unnecessary sys pieces.
	Added back, might be necessary after all?

	* src/legacy/icqt.py:
	* src/config_example.py:
	Added patches from Serge Trylis for proper encoding config.

2005-01-02  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config_example.py:
	* src/main.py:
	* src/session.py:
	* src/legacy/icqt.py:
	* src/webadmin:
	Added web admin interface + statistics gathering.

2004-12-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	Fixed 'not valid' response to version requests.

2004-12-29  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added necessary pieces for typing notification to work.

2004-12-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Added "Online" check just to be sure.

	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	* src/config_example.py:
	Added setProfile command as well as capability to do cross-im chat.

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added patches for proper ICQ user status from Jonas Adahl.

2004-12-25  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Undid patch from earlier.

	* src/lang.py:
	Applied new dutch translation.

	* src/legacy/icqt.py:
	Applied patch to have transport subscribe back to users.
